kubernetes/apps/netbootxyz/netbootxyz/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbootxyz
  namespace: netbootxyz
  labels:
    app: netbootxyz
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netbootxyz
  template:
    metadata:
      labels:
        app: netbootxyz
    spec:
      restartPolicy: Always
      containers:
        - name: netbootxyz
          image: netbootxyz/netbootxyz:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
