kubernetes/apps/netbootxyz/netbootxyz/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: netbootxyz
  labels:
    app: netbootxyz
spec:
  type: ClusterIP
  selector:
    app: netbootxyz
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
