kubernetes/apps/netbootxyz/netbootxyz/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz
  namespace: netbootxyz
spec:
  hostnames:
    - netboot.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: netbootxyz
          namespace: netbootxyz
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
